Update npm dependencies due to potential security vulnerabilities

--- a/package.json
+++ b/package.json
@@ -5,23 +5,23 @@
   "main": "src/index.js",
   "scripts": {
     "licenses": "node build/licenses-generator",
-    "lint": "eslint src/*.js",
+    "lint": "eslint src/*.js --fix",
     "test": "npm run lint && npm run unit",
     "unit": "jest --config jest.config.json"
   },
   "dependencies": {
-    "chalk": "^2.4.1"
+    "chalk": "^4.1.0"
   },
   "devDependencies": {
-    "eslint": "^5.10.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-unicorn": "^6.0.1",
-    "jest": "^23.6.0"
+    "eslint": "^7.10.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-unicorn": "^22.0.0",
+    "jest": "^26.4.2"
   },
   "engines": {
-    "node": ">=7.6.0",
-    "npm": ">=4.0.0"
+    "node": ">=13.2.0",
+    "npm": ">=6.0.0"
   },
   "repository": {
     "type": "git",
